@@ -12,6 +12,8 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+
 plugins {
     id 'com.google.protobuf'
     id 'firebase-library'
@@ -23,9 +25,9 @@ protobuf {
     dependencies {
         // Include the project dependency directly
         protobuild project(path: ':encoders:protoc-gen-firebase-encoders', configuration: 'shadow')
-    }
+}
     protoc {
-        artifact = "com.google.protobuf:protoc:$protocVersion"
+        artifact = libs.protoc.get().toString()
     }
     plugins {
         firebaseEncoders {
@@ -53,8 +55,12 @@ protobuf {
 
 
 firebaseLibrary {
-    libraryGroup "messaging"
+    libraryGroup = "messaging"
     testLab.enabled = false
+    releaseNotes {
+        name.set("{{messaging_longer}}")
+        versionName.set("messaging")
+    }
 }
 
 android {
@@ -62,9 +68,9 @@ android {
         timeOutInMs 60 * 1000
     }
     namespace "com.google.firebase.messaging"
-    compileSdkVersion project.targetSdkVersion
+    compileSdkVersion project.compileSdkVersion
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion project.minSdkVersion
         targetSdkVersion project.targetSdkVersion
         versionName version
 
@@ -72,76 +78,85 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     testOptions.unitTests.includeAndroidResources = true
+    testOptions.unitTests.all {
+        jvmArgs '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED'
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
 }
 
+kotlin { compilerOptions { jvmTarget = JvmTarget.JVM_1_8 } }
+
 dependencies {
-    androidTestImplementation "androidx.annotation:annotation:1.0.0"
-    androidTestImplementation "androidx.test.ext:junit:$androidxTestJUnitVersion"
-    androidTestImplementation "com.google.truth:truth:$googleTruthVersion"
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'junit:junit:4.12'
-    androidTestImplementation 'org.mockito:mockito-core:2.25.0'
-    androidTestImplementation 'org.mockito:mockito-inline:2.25.0'
-    androidTestImplementation(project(":integ-testing")){
-        exclude group: 'com.google.firebase', module: 'firebase-common'
-        exclude group: 'com.google.firebase', module: 'firebase-components' }
-    annotationProcessor project(":encoders:firebase-encoders-processor")
-    implementation "com.google.android.gms:play-services-basement:18.1.0"
-    implementation "com.google.android.gms:play-services-tasks:18.0.1"
-    implementation "com.google.errorprone:error_prone_annotations:2.9.0"
-    implementation "com.google.firebase:firebase-encoders-proto:16.0.0"
-    implementation "com.google.firebase:firebase-iid-interop:17.1.0"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
-    implementation 'androidx.annotation:annotation:1.2.0'
-    implementation 'com.google.android.datatransport:transport-api:3.1.0'
-    implementation 'com.google.android.datatransport:transport-backend-cct:3.1.8'
-    implementation 'com.google.android.datatransport:transport-runtime:3.1.8'
-    implementation 'com.google.android.gms:play-services-base:18.0.1'
-    implementation 'com.google.android.gms:play-services-cloud-messaging:17.1.0'
-    implementation 'com.google.android.gms:play-services-stats:17.0.2'
-    implementation 'com.google.firebase:firebase-encoders-json:18.0.0'
-    implementation 'com.google.firebase:firebase-encoders:17.0.0'
-    implementation('com.google.firebase:firebase-datatransport:18.1.7') {
+        javadocClasspath libs.autovalue.annotations
+
+        api(libs.firebase.common)
+        api(libs.firebase.components)
+        api('com.google.firebase:firebase-datatransport:18.2.0') {
          exclude group: 'com.google.firebase', module: 'firebase-common'
          exclude group: 'com.google.firebase', module: 'firebase-components'
-     }
-    implementation('com.google.firebase:firebase-installations-interop:17.1.0')
-    implementation('com.google.firebase:firebase-measurement-connector:19.0.0')
-    implementation("com.google.firebase:firebase-common:20.4.2")
-    implementation("com.google.firebase:firebase-common-ktx:20.4.2")
-    implementation("com.google.firebase:firebase-components:17.1.5")
-    implementation("com.google.firebase:firebase-installations:17.2.0")
-    javadocClasspath 'com.google.auto.value:auto-value-annotations:1.6.6'
-    testAnnotationProcessor "com.google.auto.value:auto-value:1.6.3"
-    testCompileOnly 'com.google.auto.value:auto-value-annotations:1.6.3'
-    testImplementation "androidx.test:core:$androidxTestCoreVersion"
-    testImplementation "com.google.truth:truth:$googleTruthVersion"
-    testImplementation "org.robolectric:robolectric:$robolectricVersion"
-    testImplementation 'androidx.core:core:1.6.0'
-    testImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
-    testImplementation 'androidx.test.ext:truth:1.4.0'
-    testImplementation 'androidx.test.services:test-services:1.2.0'
-    testImplementation 'androidx.test:rules:1.2.0'
-    testImplementation 'androidx.test:runner:1.2.0'
-    testImplementation 'com.android.support.test:runner:1.0.2'
-    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.9.8'
-    testImplementation 'com.google.android.gms:play-services-cloud-messaging:17.0.1'
-    testImplementation 'com.google.android.gms:play-services-vision:20.1.3'
-    testImplementation 'com.google.guava:guava-testlib:12.0-rc2'
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'junit:junit:4.13-beta-2'
-    testImplementation 'org.mockito:mockito-core:2.25.0'
-    testImplementation ("com.google.api-client:google-api-client:1.30.9") {
+        }
+        api 'com.google.firebase:firebase-encoders:17.0.0'
+        api 'com.google.firebase:firebase-encoders-json:18.0.0'
+        api "com.google.firebase:firebase-encoders-proto:16.0.0"
+        api "com.google.firebase:firebase-iid-interop:17.1.0"
+        api("com.google.firebase:firebase-installations:18.0.0") {
+          exclude group: 'com.google.firebase', module: 'firebase-common-ktx'
+        }
+        api('com.google.firebase:firebase-installations-interop:17.1.0')
+        api('com.google.firebase:firebase-measurement-connector:19.0.0')
+
+        implementation libs.androidx.annotation
+        implementation 'com.google.android.datatransport:transport-api:3.1.0'
+        implementation 'com.google.android.datatransport:transport-backend-cct:3.1.8'
+        implementation 'com.google.android.datatransport:transport-runtime:3.1.8'
+        implementation libs.bundles.playservices
+        implementation libs.play.services.cloud.messaging
+        implementation libs.play.services.stats
+        implementation libs.errorprone.annotations
+        implementation libs.kotlin.stdlib
+
+        annotationProcessor project(":encoders:firebase-encoders-processor")
+
+        testAnnotationProcessor libs.autovalue
+
+        testImplementation libs.androidx.core
+        testImplementation libs.androidx.test.core
+        testImplementation libs.androidx.test.rules
+        testImplementation libs.androidx.test.runner
+        testImplementation libs.androidx.espresso.intents
+        testImplementation libs.androidx.test.truth
+        testImplementation libs.androidx.test.services
+        testImplementation libs.runner
+        testImplementation libs.jackson.databind
+        testImplementation libs.play.services.cloud.messaging
+        testImplementation libs.play.services.vision
+        testImplementation (libs.google.api.client) {
          exclude group: "org.apache.httpcomponents", module: "httpclient"
      }
-    testImplementation ("com.google.firebase:firebase-iid:21.1.0") {
+        testImplementation ("com.google.firebase:firebase-iid:21.1.0") {
          exclude group: "com.google.firebase", module: "firebase-common"
          exclude group: "com.google.firebase", module: "firebase-components"
          exclude group: "com.google.firebase", module: "firebase-installations-interop"
          exclude group: "com.google.firebase", module: "firebase-installations"
      }
+        testImplementation 'com.google.guava:guava-testlib:12.0-rc2'
+        testImplementation libs.truth
+        testImplementation libs.junit
+        testImplementation libs.mockito.core
+        testImplementation libs.robolectric
+
+        testCompileOnly libs.autovalue.annotations
+
+        androidTestImplementation(project(":integ-testing")){
+        exclude group: 'com.google.firebase', module: 'firebase-common'
+        exclude group: 'com.google.firebase', module: 'firebase-components' }
+        androidTestImplementation libs.androidx.annotation
+        androidTestImplementation libs.androidx.test.runner
+        androidTestImplementation libs.androidx.test.junit
+        androidTestImplementation libs.truth
+        androidTestImplementation libs.junit
+        androidTestImplementation libs.mockito.core
 }
